Add slug to listing post return
Adds the listing slug to the listing POST API call so the client know what
slug was generated (if it was auto generated).

Also updates the API documention to reflect the change.

closes #177
